k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karl-portfolio
  labels:
    name: karl-portfolio
    environment: production
