k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karl-portfolio
spec:
  selector:
    app: karl-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
